# Project2

./: .gitignore  CMakeLists.txt  README.md  UserInterface.cpp  hashmap_of_hashmaps.h  main  match.md
data/: cleaning.py  college_data.csv  merging.py  only_majorsname.csv  only_names.csv  only_namesmajorfile.csv
src/: Heap.cpp  Heap.h  hashmap_of_hashmaps.cpp  hashmap_of_hashmaps.h  helpers.cpp  helpers.h  main.cpp
src/Heap/: Heap.cpp  Heap.h
src/interface/: UserInterface.cpp  UserInterface.h  home.html  homepagemain.css  inde3x.html  interface.jsx  layout.tsx  styles.css  ui.py
